tests/baselines/reference/anyIdenticalToItself.errors.txt
anyIdenticalToItself.ts(1,10): error TS2394: This overload signature is not compatible with its implementation signature.


==== anyIdenticalToItself.ts (1 errors) ====
    function foo(x: any);
             ~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 anyIdenticalToItself.ts:3:10: The implementation signature is declared here.
    function foo(x: any);
    function foo(x: any, y: number) { }
    
    class C {
        get X(): any {
            var y: any;
            return y;
        }
        set X(v: any) {
        }
    }